[AB-xxx] adding ability to add additional channels to a post target adding auto complete to post target command