@@ -4,12 +4,16 @@ import dev.sheldan.abstracto.core.config.FeatureConfig;
 import dev.sheldan.abstracto.core.config.PostTargetEnum;
 import dev.sheldan.abstracto.core.exception.PostTargetNotUsableException;
 import dev.sheldan.abstracto.core.exception.PostTargetNotValidException;
+import dev.sheldan.abstracto.core.models.database.AChannel;
+import dev.sheldan.abstracto.core.models.database.AChannelGroup;
 import dev.sheldan.abstracto.core.models.database.AServer;
 import dev.sheldan.abstracto.core.models.database.PostTarget;
+import dev.sheldan.abstracto.core.service.management.ChannelGroupManagementService;
 import dev.sheldan.abstracto.core.service.management.DefaultPostTargetManagementService;
 import dev.sheldan.abstracto.core.service.management.PostTargetManagement;
 import dev.sheldan.abstracto.core.templating.model.MessageToSend;
 import dev.sheldan.abstracto.core.utils.FutureUtils;
+import java.util.function.BiConsumer;
 import lombok.extern.slf4j.Slf4j;
 import net.dv8tion.jda.api.entities.*;
 import net.dv8tion.jda.api.entities.channel.middleman.GuildChannel;
@@ -29,6 +33,7 @@ import java.util.concurrent.CompletableFuture;
 @Component
 public class PostTargetServiceBean implements PostTargetService {
 
+    public static final String POSTTARGET_CHANNEL_GROUP_TYPE = "posttarget";
     @Autowired
     private PostTargetManagement postTargetManagement;
 
@@ -50,27 +55,70 @@ public class PostTargetServiceBean implements PostTargetService {
     @Autowired
     private MessageService messageService;
 
+    @Autowired
+    private ChannelGroupManagementService channelGroupManagementService;
+
     @Override
-    public CompletableFuture<Message> sendTextInPostTarget(String text, PostTarget target) {
+    public List<CompletableFuture<Message>> sendTextInPostTarget(String text, PostTarget target) {
         if (target.getDisabled()) {
             log.info("Post target {} has been disabled in server {} - not sending message.", target.getName(), target.getServerReference().getId());
-            return CompletableFuture.completedFuture(null);
+            return List.of(CompletableFuture.completedFuture(null));
         } else {
             log.debug("Sending text to post target {}.", target.getName());
-            return channelService.sendTextToAChannel(text, target.getChannelReference());
+            List<CompletableFuture<Message>> futures = new ArrayList<>();
+            CompletableFuture<Message> mainTargetFuture = channelService.sendTextToAChannel(text, target.getChannelReference());
+            futures.add(mainTargetFuture);
+            BiConsumer<AChannel, List<CompletableFuture<Message>>> sendToChannel = (AChannel channel, List<CompletableFuture<Message>> list)
+                -> list.add(channelService.sendTextToAChannel(text, channel));
+            executeForSingleMessages(target, sendToChannel, futures);
+            return futures;
         }
     }
 
+    private void executeForSingleMessages(PostTarget target, BiConsumer<AChannel, List<CompletableFuture<Message>>> sendToChannel, List<CompletableFuture<Message>> futures) {
+        Optional<AChannelGroup> channelGroupOptional = channelGroupManagementService.findByNameAndServerAndTypeOptional(target.getName(), target.getServerReference(),
+            POSTTARGET_CHANNEL_GROUP_TYPE);
+        channelGroupOptional.ifPresent(channelGroup -> {
+            if(channelGroup.getEnabled()) {
+                channelGroup.getChannels().forEach(aChannel -> {
+                    log.debug("Sending message also to channel due to channel group {}.", aChannel.getId());
+                    sendToChannel.accept(aChannel, futures);
+                });
+            }
+        });
+    }
+
+    private void executeForMultipleMessages(PostTarget target, BiConsumer<AChannel, List<List<CompletableFuture<Message>>>> sendToChannel, List<List<CompletableFuture<Message>>> futures) {
+        Optional<AChannelGroup> channelGroupOptional = channelGroupManagementService.findByNameAndServerAndTypeOptional(target.getName(), target.getServerReference(),
+            POSTTARGET_CHANNEL_GROUP_TYPE);
+        channelGroupOptional.ifPresent(channelGroup -> {
+            if(channelGroup.getEnabled()) {
+                channelGroup.getChannels().forEach(aChannel -> {
+                    log.debug("Sending message also to channel due to channel group {}.", aChannel.getId());
+                    sendToChannel.accept(aChannel, futures);
+                });
+            }
+        });
+    }
+
     @Override
-    public CompletableFuture<Message> sendEmbedInPostTarget(MessageEmbed embed, PostTarget target) {
+    public List<CompletableFuture<Message>> sendEmbedInPostTarget(MessageEmbed embed, PostTarget target) {
         if (target.getDisabled()) {
             log.info("Post target {} has been disabled in server {} - not sending message.", target.getName(), target.getServerReference().getId());
-            return CompletableFuture.completedFuture(null);
+            return List.of(CompletableFuture.completedFuture(null));
         } else {
             log.debug("Sending message embed to post target {}.", target.getName());
-            return getMessageChannelForPostTarget(target)
-                    .map(channel -> channelService.sendEmbedToChannel(embed, channel))
-                    .orElse(CompletableFuture.completedFuture(null));
+            List<CompletableFuture<Message>> futures = new ArrayList<>();
+            CompletableFuture<Message> mainTargetFutures = getMessageChannelForPostTarget(target)
+                .map(channel -> channelService.sendEmbedToChannel(embed, channel))
+                .orElse(CompletableFuture.completedFuture(null));
+            futures.add(mainTargetFutures);
+            BiConsumer<AChannel, List<CompletableFuture<Message>>> sendToChannel = (AChannel channel, List<CompletableFuture<Message>> list)
+                -> list.add(getMessageChannelForPostTarget(target)
+                .map(innerChannel -> channelService.sendEmbedToChannel(embed, innerChannel))
+                .orElse(CompletableFuture.completedFuture(null)));
+            executeForSingleMessages(target, sendToChannel, futures);
+            return futures;
         }
     }
 
@@ -91,62 +139,126 @@ public class PostTargetServiceBean implements PostTargetService {
     }
 
     @Override
-    public CompletableFuture<Message> sendTextInPostTarget(String text, PostTargetEnum postTargetEnum, Long serverId) {
+    public List<CompletableFuture<Message>> sendTextInPostTarget(String text, PostTargetEnum postTargetEnum, Long serverId) {
         Optional<PostTarget> postTargetOptional = getPostTarget(postTargetEnum, serverId);
-        if (!postTargetOptional.isPresent()) {
-            return CompletableFuture.completedFuture(null);
+        if (postTargetOptional.isEmpty()) {
+            return List.of(CompletableFuture.completedFuture(null));
         }
         return this.sendTextInPostTarget(text, postTargetOptional.get());
     }
 
     @Override
-    public CompletableFuture<Message> sendEmbedInPostTarget(MessageEmbed embed, PostTargetEnum postTargetName, Long serverId) {
+    public List<CompletableFuture<Message>> sendEmbedInPostTarget(MessageEmbed embed, PostTargetEnum postTargetName, Long serverId) {
         Optional<PostTarget> postTargetOptional = getPostTarget(postTargetName, serverId);
-        if (!postTargetOptional.isPresent()) {
-            return CompletableFuture.completedFuture(null);
+        if (postTargetOptional.isEmpty()) {
+            return List.of(CompletableFuture.completedFuture(null));
         }
         return this.sendEmbedInPostTarget(embed, postTargetOptional.get());
     }
 
     @Override
-    public CompletableFuture<Message> sendMessageInPostTarget(Message message, PostTargetEnum postTargetName, Long serverId) {
+    public List<CompletableFuture<Message>> sendMessageInPostTarget(Message message, PostTargetEnum postTargetName, Long serverId) {
         Optional<PostTarget> postTargetOptional = getPostTarget(postTargetName, serverId);
-        if (!postTargetOptional.isPresent()) {
-            return CompletableFuture.completedFuture(null);
+        if (postTargetOptional.isEmpty()) {
+            return List.of(CompletableFuture.completedFuture(null));
         }
         return sendMessageInPostTarget(message, postTargetOptional.get());
     }
 
     @Override
-    public CompletableFuture<Message> sendMessageInPostTarget(Message message, PostTarget target) {
+    public List<CompletableFuture<Message>> sendMessageInPostTarget(Message message, PostTarget target) {
         if (target.getDisabled()) {
             log.info("Post target {} has been disabled in server {} - not sending message.", target.getName(), target.getServerReference().getId());
-            return CompletableFuture.completedFuture(null);
+            return List.of(CompletableFuture.completedFuture(null));
         } else {
             log.debug("Send message {} towards post target {}.", message.getId(), target.getName());
-            return channelService.sendMessageToAChannel(message, target.getChannelReference());
+            List<CompletableFuture<Message>> futures = new ArrayList<>();
+            CompletableFuture<Message> mainFuture = channelService.sendMessageToAChannel(message, target.getChannelReference());
+            futures.add(mainFuture);
+            BiConsumer<AChannel, List<CompletableFuture<Message>>> sendToChannel = (AChannel channel, List<CompletableFuture<Message>> list)
+                -> list.add(channelService.sendMessageToAChannel(message, target.getChannelReference()));
+            executeForSingleMessages(target, sendToChannel, futures);
+            return futures;
         }
     }
 
     @Override
-    public List<CompletableFuture<Message>> sendEmbedInPostTarget(MessageToSend message, PostTargetEnum postTargetName, Long serverId) {
+    public List<List<CompletableFuture<Message>>> sendEmbedInPostTarget(MessageToSend message, PostTargetEnum postTargetName, Long serverId) {
         Optional<PostTarget> postTargetOptional = getPostTarget(postTargetName, serverId);
-        if (!postTargetOptional.isPresent()) {
-            return Arrays.asList(CompletableFuture.completedFuture(null));
+        if (postTargetOptional.isEmpty()) {
+            return List.of(List.of(CompletableFuture.completedFuture(null)));
         }
         return this.sendEmbedInPostTarget(message, postTargetOptional.get());
     }
 
     @Override
-    public List<CompletableFuture<Message>> sendEmbedInPostTarget(MessageToSend message, PostTarget target) {
+    public List<List<CompletableFuture<Message>>> sendEmbedInPostTarget(List<MessageToSend> messages, PostTargetEnum postTargetName, Long serverId) {
+        Optional<PostTarget> postTargetOptional = getPostTarget(postTargetName, serverId);
+        if (postTargetOptional.isEmpty()) {
+            return List.of(List.of(CompletableFuture.completedFuture(null)));
+        }
+        PostTarget target = postTargetOptional.get();
         if (target.getDisabled()) {
             log.info("Post target {} has been disabled in server {} - not sending message.", target.getName(), target.getServerReference().getId());
-            return Arrays.asList(CompletableFuture.completedFuture(null));
+            return List.of(List.of(CompletableFuture.completedFuture(null)));
         } else {
             log.debug("Send messageToSend towards post target {}.", target.getName());
-            return getMessageChannelForPostTarget(target)
-                    .map(channel -> channelService.sendMessageToSendToChannel(message, channel))
+            List<CompletableFuture<Message>> mainTargetFutures;
+            if(!messages.isEmpty()) {
+                // the primary post target channel gets the first message to send
+                mainTargetFutures = getMessageChannelForPostTarget(target)
+                    .map(channel -> channelService.sendMessageToSendToChannel(messages.get(0), channel))
                     .orElse(Arrays.asList(CompletableFuture.completedFuture(null)));
+            } else {
+                mainTargetFutures = new ArrayList<>();
+                mainTargetFutures.add(CompletableFuture.completedFuture(null));
+            }
+            List<List<CompletableFuture<Message>>> futures = new ArrayList<>();
+            futures.add(mainTargetFutures);
+            Optional<AChannelGroup> channelGroupOptional = channelGroupManagementService.findByNameAndServerAndTypeOptional(target.getName(), target.getServerReference(),
+                POSTTARGET_CHANNEL_GROUP_TYPE);
+            // the rest of the additional post target channels get the further message to sends
+            // as appropriate, if we are at the end of the available ones and there are still channels left, we just keep the same
+            channelGroupOptional.ifPresent(channelGroup -> {
+                if(channelGroup.getEnabled()) {
+                    for (int i = 0; i <  channelGroup.getChannels().size(); i++) {
+                        AChannel aChannel = channelGroup.getChannels().get(i);
+                        log.debug("Sending message also to channel due to channel group {}.", aChannel.getId());
+                        Optional<GuildMessageChannel> messageOptional =
+                            channelService.getGuildMessageChannelFromAChannelOptional(aChannel);
+                        List<CompletableFuture<Message>> innerMessageFutures;
+                        if(messageOptional.isPresent()) {
+                            innerMessageFutures =
+                                channelService.sendMessageToSendToChannel(messages.get(Math.min(messages.size() - 1, i + 1)), messageOptional.get());
+                        } else {
+                            innerMessageFutures = Arrays.asList(CompletableFuture.completedFuture(null));
+                        }
+                        futures.add(innerMessageFutures);
+                    }
+                }
+            });
+            return futures;
+        }
+    }
+
+    @Override
+    public List<List<CompletableFuture<Message>>> sendEmbedInPostTarget(MessageToSend message, PostTarget target) {
+        if (target.getDisabled()) {
+            log.info("Post target {} has been disabled in server {} - not sending message.", target.getName(), target.getServerReference().getId());
+            return List.of(List.of(CompletableFuture.completedFuture(null)));
+        } else {
+            log.debug("Send messageToSend towards post target {}.", target.getName());
+            List<CompletableFuture<Message>> mainTargetFutures = getMessageChannelForPostTarget(target)
+                .map(channel -> channelService.sendMessageToSendToChannel(message, channel))
+                .orElse(Arrays.asList(CompletableFuture.completedFuture(null)));
+            List<List<CompletableFuture<Message>>> futures = new ArrayList<>();
+            futures.add(mainTargetFutures);
+            BiConsumer<AChannel, List<List<CompletableFuture<Message>>>> sendToChannel = (AChannel channel, List<List<CompletableFuture<Message>>> list)
+                -> list.add(channelService.getGuildMessageChannelFromAChannelOptional(channel)
+                .map(innerChannel -> channelService.sendMessageToSendToChannel(message, innerChannel))
+                .orElse(Arrays.asList(CompletableFuture.completedFuture(null))));
+            executeForMultipleMessages(target, sendToChannel, futures);
+            return futures;
         }
     }
 
@@ -213,7 +325,7 @@ public class PostTargetServiceBean implements PostTargetService {
                         }).exceptionally(throwable -> {
                             log.debug("Creating new message when upserting message embeds for message {} in channel {} in server {}.",
                                 messageId, messageChannel.getIdLong(), messageChannel.getGuild().getId());
-                            sendEmbedInPostTarget(messageToSend, target).get(0)
+                            sendEmbedInPostTarget(messageToSend, target).get(0).get(0)
                                 .thenAccept(messageEditFuture::complete).exceptionally(innerThrowable -> {
                                     log.error("Failed to send message to create a message.", innerThrowable);
                                     messageEditFuture.completeExceptionally(innerThrowable);
@@ -230,7 +342,7 @@ public class PostTargetServiceBean implements PostTargetService {
                         }).exceptionally(throwable -> {
                             log.debug("Creating new message when trying to upsert a message {} in channel {} in server {}.",
                                 messageId, messageChannel.getIdLong(), messageChannel.getGuild().getId());
-                            sendEmbedInPostTarget(messageToSend, target).get(0)
+                            sendEmbedInPostTarget(messageToSend, target).get(0).get(0)
                                 .thenAccept(messageEditFuture::complete).exceptionally(innerThrowable -> {
                                     log.error("Failed to send message to create a message.", innerThrowable);
                                     messageEditFuture.completeExceptionally(innerThrowable);
@@ -248,7 +360,7 @@ public class PostTargetServiceBean implements PostTargetService {
     @Override
     public List<CompletableFuture<Message>> editOrCreatedInPostTarget(Long messageId, MessageToSend messageToSend, PostTargetEnum postTargetName, Long serverId) {
         Optional<PostTarget> postTargetOptional = getPostTarget(postTargetName, serverId);
-        if (!postTargetOptional.isPresent()) {
+        if (postTargetOptional.isEmpty()) {
             return Arrays.asList(CompletableFuture.completedFuture(null));
         }
         return this.editOrCreatedInPostTarget(messageId, messageToSend, postTargetOptional.get());
@@ -257,7 +369,7 @@ public class PostTargetServiceBean implements PostTargetService {
     @Override
     public void throwIfPostTargetIsNotDefined(PostTargetEnum targetEnum, Long serverId) {
         Optional<PostTarget> postTargetOptional = getPostTarget(targetEnum, serverId);
-        if (!postTargetOptional.isPresent()) {
+        if (postTargetOptional.isEmpty()) {
             throw new PostTargetNotValidException(targetEnum.getKey(), defaultPostTargetManagementService.getDefaultPostTargetKeys());
         }
     }
@@ -270,7 +382,7 @@ public class PostTargetServiceBean implements PostTargetService {
     @Override
     public List<CompletableFuture<Message>> editEmbedInPostTarget(Long messageId, MessageToSend message, PostTargetEnum postTargetName, Long serverId) {
         Optional<PostTarget> postTargetOptional = getPostTarget(postTargetName, serverId);
-        if (!postTargetOptional.isPresent()) {
+        if (postTargetOptional.isEmpty()) {
             return Arrays.asList(CompletableFuture.completedFuture(null));
         }
         return editEmbedInPostTarget(messageId, message, postTargetOptional.get());
